--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,28 @@
---- #YAML:1.0
-name:               WWW-Ideone
-version:            0.01
-abstract:           Perl interface to ideone.com
+---
+abstract: 'Perl interface to ideone.com'
 author:
-    - Ben Bullock <bkb@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Ben Bullock <bkb@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Carp:                 0
-    IO::Uncompress::Gunzip:  0
-    LWP::UserAgent:       0
-    Template:             0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120630'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: WWW-Ideone
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Carp: 0
+  IO::Uncompress::Gunzip: 0
+  LWP::UserAgent: 0
+  Template: 0
+resources:
+  bugtracker: https://github.com/benkasminbullock/WWW-Ideone.git/issues
+  repository: https://github.com/benkasminbullock/WWW-Ideone.git
+version: 0.02
