--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120630'
+generated_by: 'ExtUtils::MakeMaker version 6.88, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,7 +22,8 @@ requires:
   IO::Uncompress::Gunzip: 0
   LWP::UserAgent: 0
   Template: 0
+  perl: 5.008001
 resources:
-  bugtracker: https://github.com/benkasminbullock/WWW-Ideone.git/issues
-  repository: https://github.com/benkasminbullock/WWW-Ideone.git
-version: 0.02
+  bugtracker: https://github.com/benkasminbullock/WWW-Ideone/issues
+  repository: https://github.com/benkasminbullock/WWW-Ideone
+version: 0.03
